<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:padding="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/listImageView"
            android:layout_width="0dp"
            android:layout_height="145dp"
            android:src="@mipmap/me"
            android:background="@drawable/round"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1.5"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:background="#FFF"
            android:orientation="vertical">


            <TextView
                android:id="@+id/kongaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="#FFF"
                android:text="@string/konga"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gold_nike_sneakers"
                android:textColor="#6D6666"
                android:background="#FFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/if_you_are"
                android:textColor="@color/dark_gray"
                android:background="#FFF"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="#FFF"
                    android:textColor="@color/dark_gray"
                    android:text="@string/twenty_nine_thousand"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buy"
                    android:background="#FFF"
                    android:textAlignment="textEnd"
                    android:textColor="#F10D0D"
                    android:textSize="20sp"
                    android:gravity="end" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>