<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/bottom_flat_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/cat_eyes"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_touchabl"
                android:textColor="@color/dark_gray"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label"
            android:text="@string/number_1"
            android:textAlignment="center"
            android:textColor="@color/dark_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/action_panel"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/btn_star_big_on"
                    android:text="@string/trends"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/btn_star_big_on"
                    android:text="@string/style_alert"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seventeen"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/btn_star_big_on"
                    android:text="@string/new_collections"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/two_hundred_and_thirty_three"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/btn_star_big_on"
                    android:text="@string/your_stuffs"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eight"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/gray"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/gray_button"
                android:textSize="12sp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:drawableLeft="@mipmap/ic_image"
                android:drawableStart="@mipmap/ic_image"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/open_gallery" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_accent"
                android:padding="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:onClick="takePicture_Click"
                android:drawableLeft="@mipmap/ic_camera"
                android:drawableStart="@mipmap/ic_camera"
                android:text="@string/capture" />
        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/cameraImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchCamera_Click"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="8dp"
        android:src="@mipmap/ic_camera_front"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/flashModeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:onClick="shiftFlashMode_Click"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_flash_off"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>